--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </li>
         <!-- <a>的class加上 ejs 判斷(三元運算子)，如果 page 為 assignment 的話加入 active 否則加入 link-dark  -->
         <li class="nav-item">
-            <a class="nav-link fw-bold ps-0 active" href="../../2023-w5/pages/index.html">
+            <a class="nav-link fw-bold ps-0 active" href="./index.html">
                 <span class="material-icons align-middle me-4">assignment</span>
                 Assignment
             </a>
@@ -44,7 +44,7 @@
         </li>
         <!-- <a>的class加上 ejs 判斷(三元運算子)，如果 page 為 admin 的話加入 active 否則加入 link-dark  -->
         <li class="nav-item">          
-            <a class="nav-link fw-bold ps-0 link-dark" href="../../2023-w5/pages/admin.html">
+            <a class="nav-link fw-bold ps-0 link-dark" href="./admin.html">
                 <span class="material-icons align-middle me-4">group</span>
                 Admin
             </a>
