--- a/admin.html
+++ b/admin.html
@@ -279,17 +279,17 @@
                             <div class="modal-body px-8 py-1">
                               <!-- 帳號資料 -->
                               <form class="border-bottom">
-                                <fieldset disabled>
+                                <fieldset readonly>
                                   <legend class="fs-5 fw-bold">Account</legend>
                                   <div class="mb-3">
                                     <label for="memberNameInput" class="form-label">Name</label>
-                                    <input type="text" id="memberNameInput" class="form-control rounded-1 py-3"
-                                      value="Emir Wicks" disabled>
+                                    <input type="text" id="memberNameInput" class="form-control bg-light rounded-1 py-3"
+                                      value="Emir Wicks" readonly>
                                   </div>
                                   <div class="mb-6">
                                     <label for="memberMailInput" class="form-label">Email</label>
-                                    <input type="email" id="memberMailInput" class="form-control rounded-1 py-3"
-                                      value="emir.wicks@mail.com" disabled>
+                                    <input type="email" id="memberMailInput" class="form-control bg-light rounded-1 py-3"
+                                      value="emir.wicks@mail.com" readonly>
                                   </div>
                                 </fieldset>
                               </form>
