--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                     </div>
                     <div class="border-bottom pb-4 ms-12">
                       <p class="fs-7 mb-4">Hi Teacher, the attached file is my homework of chapter 2. And here comes a
-                        question: Why in the following code the height of the <span
-                        class="text-success text-decoration-none">div</span> is bigger than the height of the <span class="text-success text-decoration-none">img</span> ? There is a gap below the image, but it doesn’t seems to be a padding/margin.<br>
+                        question: Why in the following code the height of the <code
+                        class="text-success bg-light">div</code> is bigger than the height of the <code class="text-success bg-light">img</code> ? There is a gap below the image, but it doesn’t seems to be a padding/margin.<br>
                         What is the gap or extra space below image?</p>
                       <button type="button"
                         class="btn btn-light border border-gray-400 rounded-0 ps-3 pe-4 py-2 fw-bold">
@@ -203,9 +203,9 @@
                     <div class="ms-12">
                       <p class="fs-7">Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q. <br><br>
                       You can: <br><br>
-                      • adjust the <span class="text-success text-decoration-none">vertical-align</span> of the image to position it elsewhere (e.g. the <span
-                      class="text-success text-decoration-none"> middle</span> ) or <br>
-                      • change the <span class="text-success text-decoration-none">display</span> so it isn’t inline.
+                      • adjust the <code class="text-success bg-light">vertical-align</code> of the image to position it elsewhere (e.g. the <code
+                      class="text-success bg-light"> middle</code> ) or <br>
+                      • change the <code class="text-success bg-light">display</code> so it isn’t inline.
                       </p>
                     </div>
                   </div>
