--- a/pages/admin.html
+++ b/pages/admin.html
@@ -77,7 +77,7 @@
                                     <div class="collapse" id="memberInfoEdit">
                                       <div class="d-flex justify-content-between pt-8">
                                         <a href="#" class="btn btn-outline-danger btn-custome">Deactivate</a>
-                                        <a href="#" class="btn btn-success btn-custome">Edit</a>
+                                        <a href="#" class="btn btn-success btn-custome" data-bs-toggle="modal" data-bs-target="#memberEdit1">Edit</a>
                                       </div>
                                     </div>
                                   </div>
@@ -403,9 +403,6 @@
       </div>
 
   </div>
-
-
-
 
   <script type="module" src="../main.js"></script>
 </body>
