--- a/pages/index.html
+++ b/pages/index.html
@@ -15,17 +15,27 @@
         <!-- 功能選單 -->
         <%- include('./layout/header.ejs', { pageHeader: 'assignment' }) %>
           <div class="d-flex justify-content-between align-items-center">
-            <a href="#" class="link-dark lh-base text-decoration-none fw-bold d-block mb-1">All(4)
-              <span class="material-icons link-success align-top ms-2">arrow_downward</span>
-            </a>
+            <div class="dropdown">
+              <a href="#" class="dropdown-toggle link-dark lh-base text-decoration-none fw-bold d-block mb-1"
+                id="dropdownMessage" data-bs-toggle="dropdown" aria-expanded="false">
+                All(4)
+                <span class="material-icons link-success align-top ms-2">arrow_downward</span>
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMessage">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><a class="dropdown-item" href="#">Something else here</a></li>
+              </ul>
+            </div>
             <span class="fs-8 text-gray-400">2 comments</span>
           </div>
           <!-- 列表+卡片內容 -->
           <div class="d-flex justify-content-between">
             <!-- 列表 -->
             <div class="admin-list">
-              <ul class="list-group assignment-list-group text-gray-900 rounded-0">
-                <li class="list-group-item p-3 active">
+              <ul class="list-group assignment-list-group text-gray-900 rounded-0" id="list-tab" role="tablist">
+                <li class="list-group-item p-3 active" id="list-Chapter-Assignment-2" data-bs-toggle="list" href="#Chapter-Assignment-2"
+                  role="tab" aria-controls="Chapter-Assignment-2">
                   <div class="d-flex justify-content-between align-items-center mb-1">
                     <h4 class="fs-8 mb-0">Chapter Assignment 2</h4>
                     <p class="fs-8 mb-0">4 hrs ago</p>
@@ -35,7 +45,8 @@
                     <p class="fs-8 text-gray-600 mb-0">Emily Wang</p>
                   </div>
                 </li>
-                <li class="list-group-item p-3">
+                <li class="list-group-item p-3" id="list-Chapter-Assignment-1" data-bs-toggle="list" href="#Chapter-Assignment-1"
+                role="tab" aria-controls="Chapter-Assignment-1">
                   <div class="d-flex justify-content-between align-items-center mb-1">
                     <h4 class="fs-8 mb-0">Chapter Assignment 1</h4>
                     <p class="fs-8 mb-0">12 hrs ago</p>
@@ -45,9 +56,9 @@
                     <p class="fs-8 text-gray-600 mb-0">David Xu</p>
                   </div>
                 </li>
-                <li class="list-group-item p-3">
+                <li class="list-group-item p-3" id="list-Final-Assignment-1" data-bs-toggle="list" href="#Final-Assignment-1" role="tab" aria-controls="Chapter-Assignment-1">
                   <div class="d-flex justify-content-between align-items-center mb-1">
-                    <h4 class="fs-8 mb-0">Final Assignment</h4>
+                    <h4 class="fs-8 mb-0">Final Assignment 1</h4>
                     <p class="fs-8 mb-0">18 hrs ago</p>
                   </div>
                   <div class="d-flex justify-content-between align-items-center">
@@ -55,9 +66,9 @@
                     <p class="fs-8 text-gray-600 mb-0">Tony Wei</p>
                   </div>
                 </li>
-                <li class="list-group-item p-3">
+                <li class="list-group-item p-3" id="list-Final-Assignment-2" data-bs-toggle="list" href="#Final-Assignment-2" role="tab" aria-controls="Chapter-Assignment-2">
                   <div class="d-flex justify-content-between align-items-center mb-1">
-                    <h4 class="fs-8 mb-0">Final Assignment</h4>
+                    <h4 class="fs-8 mb-0">Final Assignment 2</h4>
                     <p class="fs-8 mb-0">19 hrs ago</p>
                   </div>
                   <div class="d-flex justify-content-between align-items-center">
@@ -68,91 +79,116 @@
               </ul>
             </div>
             <!-- 卡片 -->
-            <div class="admin-card">
-              <div class="card rounded-0 mb-4">
-                <div class="card-header d-flex justify-content-between align-items-center py-3">
-                  <div>
-                    <h5 class="fs-8 mb-1">Chapter Assignment 2 / HTML&CSS</h5>
-                    <p class="fw-bold mb-0">Please check this file for me, thanks!</p>
-                  </div>
-                  <a href="#" class="link-dark">
-                    <span class="material-icons align-middle">more_vert</span>
-                  </a>
-                </div>
-                <div class="card-body">
-                  <!-- 上 -->
-                  <div class="mb-4 me-4">
-                    <div class="d-flex align-items-center mb-4">
-                      <div class="flex-shrink-0">
-                        <img
-                          src="https://images.unsplash.com/photo-1504051771394-dd2e66b2e08f?ixlib=rb-1.2.1&ixid=eyjhchbfawqiojeymdd9&auto=format&fit=crop&w=2134&q=80"
-                          alt="member" class="avatar rounded-circle">
-                      </div>
-                      <div class="flex-grow-1 ms-3">
-                        <p class="fw-bold mb-0">Emily Wang</p>
-                        <time class="fs-8 text-gray-600">10:38 AM (4 hours ago)</time>
-                      </div>
-                    </div>
-                    <div class="border-bottom pb-4 ms-12">
-                      <p class="fs-7 mb-4">Hi Teacher, the attached file is my homework of chapter 2. And here comes a
-                        question: Why in the following code the height of the <code
-                        class="text-success bg-light">div</code> is bigger than the height of the <code class="text-success bg-light">img</code> ? There is a gap below the image, but it doesn’t seems to be a padding/margin.<br>
-                        What is the gap or extra space below image?</p>
-                      <button type="button"
-                        class="btn btn-light border border-gray-400 rounded-0 ps-3 pe-4 py-2 fw-bold">
-                        <span class="material-icons-outlined align-middle me-2">attach_file</span>
-                        HW-2-David.zip</button>
-                    </div>
-                  </div>
-                  <!-- 下 -->
-                  <div class="me-4">
-                    <div class="d-flex justify-content-between mb-4">
-                      <div class="d-flex justify-content-between align-items-center">
-                        <div class="flex-shrink-0">
-                          <img
-                            src="https://images.unsplash.com/photo-1514794749374-fb67509dbb7f?ixlib=rb-1.2.1&ixid=eyjhchbfawqiojeymdd9&auto=format&fit=crop&w=2000&q=80"
-                            alt="member" class="avatar rounded-circle">
-                        </div>
-                        <div class="flex-grow-1 ms-3">
-                          <p class="fw-bold mb-0">Andy Chen (You)</p>
-                          <time class="fs-8 text-gray-600">13:24 AM (1 hours ago)</time>
-                        </div>
-                      </div>
-                      <div>
-                        <a href="#" class="link-dark d-inline-block me-8">
-                          <span class="material-icons align-top">star_outline</span>
-                        </a>
-                        <a href="#" class="link-dark d-inline-block">
-                          <span class="material-icons align-top">edit</span>
-                        </a>
-                      </div>
-                    </div>
-                    <div class="ms-12">
-                      <p class="fs-7">Hi David, by default, an image is rendered inline, like a letter so it sits on the same line that a, b, c and d sit on. There is space below that line for the descenders you find on letters like g, j, p and q. <br><br>
-                      You can: <br><br>
-                      • adjust the <code class="text-success bg-light">vertical-align</code> of the image to position it elsewhere (e.g. the <code
-                      class="text-success bg-light"> middle</code> ) or <br>
-                      • change the <code class="text-success bg-light">display</code> so it isn’t inline.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-              <div class="d-flex justify-content-between">
+            <div class="tab-content admin-card" id="nav-tabContent">
+              <div class="tab-pane fade show active" id="Chapter-Assignment-2" role="tabpanel" aria-labelledby="list-Chapter-Assignment-2">
                 <div>
-                  <a href="#" class="d-inline-block link-dark me-6">
-                    <span class="material-icons align-top">navigate_before</span>
-                  </a>
-                  <a href="#" class="d-inline-block link-dark">
-                    <span class="material-icons align-top">navigate_next</span>
-                  </a>
-                </div>
-                <div class="d-flex">
-                  <a href="#" class="btn btn-outline-success rounded-1 px-8 py-2 me-4">Mark as read</a>
-                  <a href="./index-reply.html" class="btn btn-success rounded-1 px-8 py-2">Reply</a>
+                  <div class="card rounded-0 mb-4">
+                    <div class="card-header d-flex justify-content-between align-items-center py-3">
+                      <div>
+                        <h5 class="fs-8 mb-1">Chapter Assignment 2 / HTML&CSS</h5>
+                        <p class="fw-bold mb-0">Please check this file for me, thanks!</p>
+                      </div>
+                      <a href="#" class="link-dark">
+                        <span class="material-icons align-middle">more_vert</span>
+                      </a>
+                    </div>
+                    <div class="card-body">
+                      <!-- 上 -->
+                      <div class="mb-4 me-4">
+                        <div class="d-flex align-items-center mb-4">
+                          <div class="flex-shrink-0">
+                            <img
+                              src="https://images.unsplash.com/photo-1504051771394-dd2e66b2e08f?ixlib=rb-1.2.1&ixid=eyjhchbfawqiojeymdd9&auto=format&fit=crop&w=2134&q=80"
+                              alt="member" class="avatar rounded-circle">
+                          </div>
+                          <div class="flex-grow-1 ms-3">
+                            <p class="fw-bold mb-0">Emily Wang</p>
+                            <time class="fs-8 text-gray-600">10:38 AM (4 hours ago)</time>
+                          </div>
+                        </div>
+                        <div class="border-bottom pb-4 ms-12">
+                          <p class="fs-7 mb-4">Hi Teacher, the attached file is my homework of chapter 2. And here comes
+                            a
+                            question: Why in the following code the height of the <code
+                              class="text-success bg-light">div</code> is bigger than the height of the <code
+                              class="text-success bg-light">img</code> ? There is a gap below the image, but it doesn’t
+                            seems to be a padding/margin.<br>
+                            What is the gap or extra space below image?</p>
+                          <button type="button"
+                            class="btn btn-light border border-gray-400 rounded-0 ps-3 pe-4 py-2 fw-bold">
+                            <span class="material-icons-outlined align-middle me-2">attach_file</span>
+                            HW-2-David.zip</button>
+                        </div>
+                      </div>
+                      <!-- 下 -->
+                      <div class="me-4">
+                        <div class="d-flex justify-content-between mb-4">
+                          <div class="d-flex justify-content-between align-items-center">
+                            <div class="flex-shrink-0">
+                              <img
+                                src="https://images.unsplash.com/photo-1514794749374-fb67509dbb7f?ixlib=rb-1.2.1&ixid=eyjhchbfawqiojeymdd9&auto=format&fit=crop&w=2000&q=80"
+                                alt="member" class="avatar rounded-circle">
+                            </div>
+                            <div class="flex-grow-1 ms-3">
+                              <p class="fw-bold mb-0">Andy Chen (You)</p>
+                              <time class="fs-8 text-gray-600">13:24 AM (1 hours ago)</time>
+                            </div>
+                          </div>
+                          <div>
+                            <a href="#" class="link-dark d-inline-block me-8">
+                              <span class="material-icons align-top">star_outline</span>
+                            </a>
+                            <a href="#" class="link-dark d-inline-block">
+                              <span class="material-icons align-top">edit</span>
+                            </a>
+                          </div>
+                        </div>
+                        <div class="ms-12">
+                          <p class="fs-7">Hi David, by default, an image is rendered inline, like a letter so it sits on
+                            the
+                            same line that a, b, c and d sit on. There is space below that line for the descenders you
+                            find
+                            on letters like g, j, p and q. <br><br>
+                            You can:</p>
+                          <ul class="fs-7">
+                            <li>adjust the <code class="text-success bg-light">vertical-align</code> of the image to
+                              position it elsewhere (e.g. the <code class="text-success bg-light"> middle</code> ) or
+                            </li>
+                            <li>change the <code class="text-success bg-light">display</code> so it isn’t inline.</li>
+                          </ul>
+                          <!-- <p class="fs-7">Hi David, by default, an image is rendered inline, like a letter so it sits on the
+                            same line that a, b, c and d sit on. There is space below that line for the descenders you find
+                            on letters like g, j, p and q. <br><br>
+                            You can: <br><br>
+                            • adjust the <code class="text-success bg-light">vertical-align</code> of the image to position
+                            it elsewhere (e.g. the <code class="text-success bg-light"> middle</code> ) or <br>
+                            • change the <code class="text-success bg-light">display</code> so it isn’t inline.
+                          </p> -->
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="d-flex justify-content-between">
+                    <div>
+                      <a href="#" class="d-inline-block link-dark me-6">
+                        <span class="material-icons align-top">navigate_before</span>
+                      </a>
+                      <a href="#" class="d-inline-block link-dark">
+                        <span class="material-icons align-top">navigate_next</span>
+                      </a>
+                    </div>
+                    <div class="d-flex">
+                      <a href="#" class="btn btn-outline-success rounded-1 px-8 py-2 me-4">Mark as read</a>
+                      <a href="./index-reply.html" class="btn btn-success rounded-1 px-8 py-2">Reply</a>
+                    </div>
+                  </div>
                 </div>
               </div>
+              <div class="tab-pane fade" id="Chapter-Assignment-1" role="tabpanel" aria-labelledby="list-Chapter-Assignment-1">2</div>
+              <div class="tab-pane fade" id="Final-Assignment-1" role="tabpanel" aria-labelledby="list-Final-Assignment-1">3</div>
+              <div class="tab-pane fade" id="Final-Assignment-2" role="tabpanel" aria-labelledby="list-Final-Assignment-2">4</div>
             </div>
+
           </div>
       </div>
 
